<resources>
    <string name="app_name">FitSoc</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up_with_email">Sign up with e - mail</string>
    <string name="action_sign_up_with_wechat">Sign up with WeChat</string>
    <string name="action_sign_in_with_email">Sign in with e - mail</string>
    <string name="action_sign_in_with_wechat">Sign in with WeChat</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_reset">New password (> 5 characters)</string>
    <string name="age_set">Age (Only Number)</string>
    <string name="height_set">Height (cm) (Only Number)</string>
    <string name="weight_set">Weight (kg) (Only Number)</string>
    <string name="action_password_reset_short">Reset</string>
    <string name="action_age_short">Age</string>
    <string name="action_height_short">Height</string>
    <string name="action_weight_short">Weight</string>
    <string name="settings_save">Accept</string>

    <string name="menu_run">Run</string>
    <string name="menu_community">Community</string>
    <string name="menu_task">Tasks</string>
    <string name="menu_rank">Rank</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu">Start your fitness journey</string>
</resources>
